--- a/.github/workflows/daily-reminder.yml
+++ b/.github/workflows/daily-reminder.yml
@@ -482,10 +482,10 @@ jobs:
                   const chosenIso = titles.length === 1 && dueIsos.length >= 1
                     ? dueIsos[0]
                     : (dueIsos.length === 1 ? dueIsos[0] : ctx.dateIso);
-                  const parts = typeof chosenIso === 'string' && /^\d{4}-\d{2}-\d{2}$/.test(chosenIso)
+                  const isoParts = typeof chosenIso === 'string' && /^\d{4}-\d{2}-\d{2}$/.test(chosenIso)
                     ? chosenIso.split('-')
                     : null;
-                  const formatted = parts ? `${parts[2]}/${parts[1]}/${parts[0]}` : (()=>{
+                  const formatted = isoParts ? `${isoParts[2]}/${isoParts[1]}/${isoParts[0]}` : (()=>{
                     const date = (ctx && ctx.selectedDate instanceof Date) ? ctx.selectedDate : new Date();
                     const dd = String(date.getDate()).padStart(2,'0');
                     const mm = String(date.getMonth()+1).padStart(2,'0');
