--- a/.github/workflows/daily-reminder.yml
+++ b/.github/workflows/daily-reminder.yml
@@ -508,8 +508,7 @@ jobs:
                     `<p>${greeting}</p>`,
                     `<p>${intro}</p>`,
                     `<ul style="padding-left:20px;margin:0 0 12px 0;">${list}</ul>`,
-                    `<p style=\"margin:16px 0 0 0;\"><a href=\"${emailLink}\" style=\"display:inline-block;background:#2563eb;color:#ffffff;text-decoration:none;padding:10px 16px;border-radius:10px;box-shadow:0 1px 2px rgba(15,23,42,0.08);\">Ouvrir mon suivi</a></p>`,
-                    `<p style=\"margin-top:16px;font-size:12px;color:#64748b;\">Email automatique programmé (workflow GitHub Actions).</p>`,
+                    `<p style=\"margin:16px 0 0 0;\"><a href=\"${emailLink}\" style=\"display:inline-block;background:#bfdbfe;border:1px solid #93c5fd;color:#1e3a8a;text-decoration:none;padding:10px 16px;border-radius:10px;box-shadow:0 1px 2px rgba(15,23,42,0.08);\">Ouvrir mon suivi</a></p>`,
                     `</div>`
                   ].join('');
 
